[GStreamer] Invalid use of UTF-8 validation in ClearKey key data https://bugs.webkit.org/show_bug.cgi?id=205106

Reviewed by Xabier Rodriguez-Calvar.

media/encrypted-media/clearKey/clearKey-cenc-audio-playback-mse.html

* platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:
(findAndSetKey): Mistakenly was using utf-8 conversions on binary
data, which in some cases caused invalid key data being given to
GCrypt.


Canonical link: https://commits.webkit.org/218307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253367 268f45cc-cd09-0410-ab3c-d52691b4dbfc